--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "GooseMod for Web",
-    "description": "A light, secure, and easy to use Discord mod; now in your browser.",
+    "name": "banefyre-ext",
+    "description": "",
 
-    "version": "1.2.2",
+    "version": "1.0.0",
 
-    "author": "GooseMod Team",
-    "homepage_url": "https://goosemod.com",
+    "author": "GooseMod Team, with modifications.",
+    "homepage_url": "",
 
     "icons": {
         "48": "icons/48.png",
@@ -37,7 +37,7 @@
 
     "browser_specific_settings": {
         "gecko": {
-            "id": "invalid@goosemod.com"
+            "id": "invalid@x.com"
         }
     }
 }
